[gd_scene load_steps=5 format=3 uid="uid://dm21q2g1k63vp"]

[ext_resource type="Script" uid="uid://cylcj3rncmo4l" path="res://dialogues/trash_dialogue.gd" id="1_e5bwu"]
[ext_resource type="FontFile" uid="uid://rdldim0q2d46" path="res://olivia/assets/Kenney Future Narrow.ttf" id="2_vh74k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v3kgn"]
size = Vector2(20, 48)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e5bwu"]
bg_color = Color(0.881937, 0.881937, 0.881937, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="TrashDialogue" type="Area2D"]
script = ExtResource("1_e5bwu")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="GrTrash" type="Label" parent="."]
offset_left = 30.0
offset_top = -18.0
offset_right = 219.0
offset_bottom = 9.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0.482353, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vh74k")
theme_override_font_sizes/font_size = 24
text = "Gross, trash."

[node name="ComeBack" type="Label" parent="."]
offset_left = 24.0
offset_top = -19.0
offset_right = 367.0
offset_bottom = 38.0
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vh74k")
theme_override_font_sizes/font_size = 24
text = "I'll come back and find
a trash bin to put that in"
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(10, -10)
shape = SubResource("RectangleShape2D_v3kgn")

[node name="white_background" type="Panel" parent="."]
z_index = -1
offset_left = 17.0
offset_top = -23.0
offset_right = 132.0
offset_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_e5bwu")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
